Added story of bitboxer.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <title>BitBoxing</title>
 </head>
 <body>
-Hello world!
+    <h2>The BitBoxer</h2>
+    <p>This is the story of a boxer that was actually a bit.</p>
+    <p>On days that were prime, he was a zero, on all other days, he was a one.</p>
+    <p>This is the story of a bit that was actually a boxer.</p>
+    <p>On days that were not prime he was a one, on all other days, he was a zero.</p>
 </body>
 </html>
