Added last line to base story.

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <p>On days that were prime, he was a zero, on all other days, he was a one.</p>
     <p>This is the story of a bit that was actually a boxer.</p>
     <p>On days that were not prime he was a one, on all other days, he was a zero.</p>
+    <p>This is the story of the bit boxer.</p>
 </body>
 </html>
